--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^14.3.0",
     "express": "^4.14.1",
     "socket.io": "^1.7.3"
   },
